﻿v1.2.6

Rez Master
* Change: Prevented clients sending Ability Remove messages while the player is in combat.
* Fixed: Typo with one of the class tracking variables.
* Fixed: The Rez list was not updating correctly if you log in while in a Party/Raid.

Ready Check
* Change: The queue system has changed to account for some lag and Instanced PvP issues.

Infernal Dawn
* Laethys
** Fixed: Re-initialized the Laethys castbar in Phase 2 with the new Unit ID.

----
v1.2.5

Hammerknell
* Rune King Molinar
** Removed: Depreciated API commands have been removed from Reset code.

Primeval Feast
* Lord Twyl
** New: Added a separate cast warning Alert for Flickering Fire which can be customized individually from the Purge alert.
** Fixed: Corrected the triggers for Mechanic Spy tracking, for Phase 1 critters.
** Change: The Alert for the cast portion of Flickering Fire is now separated from the Debuff.
** Change: Frozen Nova now has a countdown timer on the alert text.
** Change: Frozen Nova is now marked as Important.

Translations
* Fixed: The output no longer uses print_raw.

----
v1.2.4

Rift Version
* Change: Now supports Rift 1.10

System
* Triggers
** New: Unit Deaths can now perform triggers with the trigger ID "death".
** Fixed: An issues with "playerIDBuffRemove" styles not initializing correctly. (I have no idea how this didn't error during Conclave)
* Buffs
** New: You can now turn on Sheep Protection via the main menu (Global Options > Settings).
** Change: Cached buffs will no longer retrieve their data lists more than once. (CPU Optimization)
* Unit Tracking
** Fixed: Issue where Details field could initialize as nil, this will now initialize as Details Table or an Empty Table.

Ready Check
* Change: Ready Check saved variables are now either Account or per Character as set via Saving per character option.
* Change: Optimized CPU usage while the Ready Check system is disabled.
* Change: Optimized CPU usage while the Ready Check display is hidden.